--- a/src/app/[lng]/(pages)/contact/contact.module.scss
+++ b/src/app/[lng]/(pages)/contact/contact.module.scss
@@ -45,6 +45,12 @@
       font-size: 14px;
     }
   }
+
+  &__paragraphs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 }
 
 .border {
